# task

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build_all.bat  build_all.sh
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/example_simple_then/: CMakeLists.txt  main.cpp
src/rename_me/: CMakeLists.txt
src/rename_me/include/rename_me/: base_task.h  custom_task.h  data_traits.h  expected.h  for_loop_task.h  forward_task.h  function_task.h  future_task.h  in_place_task.h  noop_task.h  scheduler.h  storage.h  task.h  task_forward.h
src/rename_me/include/rename_me/detail/: config.h  cpp_20.h  ebo_storage.h  function_task_base.h  function_task_impl.h  internal_task.h  lazy_storage.h  noop_task_base.h  on_finish_task.h  ref_count_ptr.h
src/rename_me/src/: example.cpp  scheduler.cpp
src/task_curl/: CMakeLists.txt
src/task_curl/include/task_curl/: task_curl.h
src/task_curl/src/: task_curl.cpp
src/tests/: CMakeLists.txt
src/tests/test_rename_me/: CMakeLists.txt  example.cpp  test_custom_task.cpp  test_for_loop_task.cpp  test_forward_task.cpp  test_function_task.cpp  test_future_task.cpp  test_in_place_task.cpp  test_lazy_storage.cpp  test_noop_task.cpp  test_on_finish.cpp  test_ref_count_ptr.cpp  test_scheduler.cpp  test_task_forward.cpp  test_tools.h
src/tests/test_task_curl/: CMakeLists.txt  mock_server.cpp  mock_server.h  test_task_curl.cpp
tools/: generate_project.py
tools/cmake/: utils.cmake
